k8s/api-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: api-server
  template:
    metadata:
      labels:
        component: api-server
    spec:
      volumes:
        - name: bucket
          persistentVolumeClaim:
            claimName: bucket-pvc
      containers:
        - name: api-server
          image: maksimshilov/myproject:api-v1
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /usr/api/bucket
              name: bucket
