k8s/optimization-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: optimization-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: optimization-server
  ports:
    - port: 8090
      targetPort: 8090
