k8s/ui-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: ui
  ports:
    - port: 4000
      targetPort: 80
