k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
spec:
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: ui-cluster-ip
              port: 
                number: 4000
        - pathType: Prefix
          path: "/api"
          backend:
            service:
              name: api-cluster-ip
              port:
                number: 8080
